[gd_scene load_steps=2 format=3 uid="uid://y6y8havo5xv7"]

[ext_resource type="Script" path="res://menus/options.gd" id="1_tk4kh"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_tk4kh")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 572.0
offset_top = 229.0
offset_right = 707.0
offset_bottom = 490.0

[node name="window_mode" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 135.0
offset_bottom = 26.0
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="full_screen" type="CheckButton" parent="CenterContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 135.0
offset_bottom = 54.0
flat = true
alignment = 1
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 58.0
offset_right = 135.0
offset_bottom = 78.0
theme_override_constants/margin_top = 20

[node name="music_vol" type="Label" parent="CenterContainer/VBoxContainer"]
offset_top = 82.0
offset_right = 135.0
offset_bottom = 108.0
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_vol_value" type="HSlider" parent="CenterContainer/VBoxContainer"]
offset_top = 112.0
offset_right = 135.0
offset_bottom = 128.0
min_value = -50.0
max_value = 30.0
rounded = true

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 132.0
offset_right = 135.0
offset_bottom = 152.0
theme_override_constants/margin_top = 20

[node name="sfx_vol" type="Label" parent="CenterContainer/VBoxContainer"]
offset_top = 156.0
offset_right = 135.0
offset_bottom = 182.0
text = "Sound FX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_vol2" type="HSlider" parent="CenterContainer/VBoxContainer"]
offset_top = 186.0
offset_right = 135.0
offset_bottom = 202.0
min_value = -50.0
max_value = 30.0
rounded = true

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 206.0
offset_right = 135.0
offset_bottom = 226.0
theme_override_constants/margin_top = 20

[node name="back" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 230.0
offset_right = 135.0
offset_bottom = 261.0
text = "Back"
